--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 __pycache__
 db.sqlite3
 media/
-app/__pycache__
-steganography/__pycache__
+app/__pycache__/*.py
+steganography/__pycache__/*.py
+steganography/settings.py
 
 # Backup files # 
 *.bak 
