--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 __pycache__
 db.sqlite3
 media/
-app/__pycache__/
-steganography/__pycache__/
+app/__pycache__/*.pyc
+steganography/__pycache__/*.pyc
 steganography/settings.py
 
 # Backup files # 
